--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "paystack": "^2.0.1",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
